# Golf

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
game/: CameraScript.cpp  CameraScript.h  ExitGameScript.cpp  ExitGameScript.h  Golf.cpp  Golf.h  PlayerScript.cpp  PlayerScript.h
game/game_data/: leaders.json  player.json  player_levels.json
game/levels/left/: 1.json  2.json
game/levels/right/: 1.json
game/prefabs/: Ball.cpp  Ball.h  Button.cpp  Button.h  Collision.cpp  Collision.h  Field.cpp  Field.h  Hole.cpp  Hole.h  HoleNumber.cpp  HoleNumber.h  PowerRow.cpp  PowerRow.h  Rectangle.cpp  Rectangle.h  ScoreText.cpp  ScoreText.h  Wall.cpp  Wall.h
game/scenes/: GameScene.cpp  GameScene.h  Menu.cpp  Menu.h
game/scripts/: CameraScript.cpp  CameraScript.h  CheckEnd.cpp  CheckEnd.h  ExitGameScript.cpp  ExitGameScript.h  PlayerScript.cpp  PlayerScript.h  TextInput.cpp  TextInput.h
headers/: Camera.h  Component.h  Context.h  Game.h  GameObject.h  Log.h  Scene.h  Window.h  utils.h
headers/templates/: Button.h  Text.h
src/: Camera.cpp  Component.cpp  Context.cpp  Game.cpp  GameObject.cpp  Scene.cpp  Window.cpp  main.cpp  utils.cpp
src/templates/: Button.cpp  Text.cpp
